[#985] Aws integration
* Fixed aws support in connections
* Added new type of connection: ecr
* Integrate rest packer with ecr
* Operator can create a pull k8s secret from docker connections
* Removed the empty connection controller
