# legion/operator/docs/swagger.yaml
@@ -385,6 +385,10 @@ definitions:
       image:
         description: Model Docker image
         type: string
+      imagePullConnID:
+        description: If pulling of your image requires authorization, then you should
+          specify the connection id
+        type: string
       livenessProbeInitialDelay:
         description: Initial delay for liveness probe of model pod
         type: integer
@@ -419,6 +423,9 @@ definitions:
         type: string
       lastRevisionName:
         description: Last applied ready knative revision
+        type: string
+      lastUpdatedTime:
+        description: Time when credentials was updated
         type: string
       replicas:
         description: Expected number of pods under current load
